# bq

./: README.md  pyproject.toml
.github/workflows/: python.yml
src/bq/: __init__.py  cli.py  display.py  search.py
tests/: test_cli.py
